--- a/src/pages/People/People.module.css
+++ b/src/pages/People/People.module.css
@@ -5,13 +5,31 @@
     display: flex;
 }
 
-.wrapper{
+.title{
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.container{
     max-width: 300px;
     min-width: 300px;
-    background-color: aqua;
+    /* background-color: aqua; */
     width: 100%;
     border-right: 1.5px solid rgba(168, 168, 168, 0.394);
     height: calc(100vh - 50px);
     padding: 10px;
     overflow: scroll;
+}
+
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.content{
+    width: 100%;
+    background-color: var(--grey-custom);
 }
