--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -83,7 +83,7 @@
 .content{
     display: flex;
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     background-color: var(--grey-custom);
 }
 
