--- a/src/pages/Chat/Chat.module.css
+++ b/src/pages/Chat/Chat.module.css
@@ -1,7 +1,27 @@
-.contentBar{
+.chat{
+    display: flex;
+}
 
+.title {
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.navbar{
+    max-width: 300px;
+    min-width: 300px;
+    /* background-color: aqua; */
+    width: 100%;
+    border-right: 1.5px solid rgba(168, 168, 168, 0.394);
+    height: calc(100vh - 50px);
+    padding: 10px;
+    overflow: scroll;
 }
 
 .content{
-
+    width: 100%;
+    height: 100vh;
+    background-color: var(--grey-custom);
 }
