--- a/src/pages/People/People.module.css
+++ b/src/pages/People/People.module.css
@@ -5,14 +5,9 @@
     display: flex;
 }
 
-.title{
-    font-size: 16px;
-    font-weight: 600;
-    text-align: center;
-    margin-bottom: 30px;
-}
 
-.container{
+
+.navbar{
     max-width: 300px;
     min-width: 300px;
     /* background-color: aqua; */
@@ -23,6 +18,13 @@
     overflow: scroll;
 }
 
+.title {
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
 .wrapper{
     display: flex;
     flex-direction: column;
@@ -31,5 +33,6 @@
 
 .content{
     width: 100%;
+    height: 100vh;
     background-color: var(--grey-custom);
 }
