--- a/src/components/PostList/PostList.module.css
+++ b/src/components/PostList/PostList.module.css
@@ -2,6 +2,7 @@
 
 .postList{
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 10px;
+    padding-bottom: 10px;
 }
