--- a/src/pages/Chat/Chat.module.css
+++ b/src/pages/Chat/Chat.module.css
@@ -17,7 +17,8 @@
     border-right: 1.5px solid rgba(168, 168, 168, 0.394);
     height: calc(100vh - 50px);
     padding: 10px;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .content{
