--- a/src/pages/Profile/location/ChangeProfile/ChangeProfile.module.css
+++ b/src/pages/Profile/location/ChangeProfile/ChangeProfile.module.css
@@ -39,6 +39,7 @@
     font-size: 12px;
     outline: none;
     border: none;
+    resize: none;
 }
 
 .customInput:nth-child(-n + 3) {
@@ -47,6 +48,7 @@
     font-size: 12px;
     outline: none;
     border: none;
+    
 }
 
 .avatar {
@@ -63,7 +65,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    width: 70px;
+    width: 60px;
     height: 60px;
     background-color: azure;
 }
